# privates

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yaml
src/privates/: analytics.py  models.py
test/: test_analytics.py  test_models.py  test_privates.py
tutorials/: fund.py
